# libyang

./: .travis.yml  CMakeLists.txt  CODINGSTYLE  Doxyfile  Doxyfile.in  FAQ.md  FindLibYANG.cmake  FindYANG.cmake  KNOWNISSUES.md  LICENSE  README.md  SECURITY.md  codecov.yml  details.md  libyang.dump  libyang.pc.in  libyang_0.16.105.orig.tar.gz.delta  libyang_0.16.105.orig.tar.gz.id  libyang_1.0.167.orig.tar.gz.delta  libyang_1.0.167.orig.tar.gz.id  libyang_1.0.176.orig.tar.gz.delta  libyang_1.0.176.orig.tar.gz.id  libyang_1.0.184.orig.tar.gz.delta  libyang_1.0.184.orig.tar.gz.id  uncrustify.cfg  uncrustify_0.74.0.cfg
python/: CMakeLists.txt  MANIFEST.in  README.md  build-so.sh  pydistutils.cfg.in  run_python.sh.in  setup.cfg  setup.py
python/cffi/: build.py  cdefs.h  source.c
python/libyang/: __init__.py  data.py  diff.py  schema.py  util.py
python/tests/: __init__.py  test_context.py  test_data.py  test_diff.py  test_schema.py
src/extensions/: CMakeLists.txt  ext_test.c  libyang_ext_test.c  metadata.c  nacm.c  yang-data.c  yangdata.c
swig/: CMakeLists.txt  swig3.0_3.0.12-2_arm64.deb  swig3.0_3.0.8-0ubuntu3_amd64.deb  swig_3.0.12-2_arm64.deb
swig/cpp/examples/: CMakeLists.txt  context.cpp  process_notif_tree.cpp  process_tree.cpp  xpath.cpp
swig/cpp/src/: Internal.cpp  Internal.hpp  Libyang.cpp  Libyang.hpp  Tree_Data.cpp  Tree_Data.hpp  Tree_Schema.cpp  Tree_Schema.hpp  Xml.cpp  Xml.hpp
swig/cpp/tests/: CMakeLists.txt  microtest.h  test_libyang.cpp  test_tree_data.cpp  test_tree_schema.cpp
swig/java/: CMakeLists.txt  README.md
swig/java/example/: ProcessTree.java  Xpath.java
swig/java/examples/: Context.java  ProcessTree.java
swig/java/test/: Constants.java  LibyangTest.java  TreeDataTest.java  TreeSchemaTest.java
swig/java/tests/: CMakeLists.txt  LibyangTest.java  TreeDataTest.java  TreeSchemaTest.java
swig/javascript/: CMakeLists.txt  Dockerfile  README.md  binding.gyp.cmake  binding.gyp.in  index.js  libyang_javascript.i  package.json.cmake  package.json.in  run.sh  test.js.in
swig/javascript/test/: yang.js
swig/python/: CMakeLists.txt  config.py.in  libyang.i  run_python_test.sh  yang.i
swig/python/examples/: context.py  imp_cb.py  process_tree.py  subtype.py  (+1 more)
swig/swig_base/: cpp_classes.i  libyangEnums.i
tests/: CMakeLists.txt  config.h.in  cstr.sh  test_data_initialization.c  tool_i.tcl
tests/api/: test_dict.c  test_diff.c  test_hash_table.c  test_libyang.c  test_merge.c  test_tree_data.c  test_tree_data_dup.c  test_tree_data_merge.c  test_tree_schema.c  test_xml.c  test_xpath.c  test_xpath_1.1.c
tests/callgrind/: CMakeLists.txt  create_data.c  list_manipulation.c  validate.c
tests/config/: hello.xml
tests/conformance/: test_sec5_1.c  test_sec5_5.c  test_sec6_1_1.c  test_sec6_1_3.c  test_sec6_2.c  test_sec6_2_1.c  test_sec7_1.c  test_sec7_10.c  test_sec7_11.c  test_sec7_12_1.c  test_sec7_12_2.c  test_sec7_13_1.c  test_sec7_13_2.c  test_sec7_13_3.c  test_sec7_14.c  test_sec7_15.c  test_sec7_15_1.c  test_sec7_16_1.c  test_sec7_16_2.c  test_sec7_18_1.c  test_sec7_18_2.c  test_sec7_18_3_1.c  test_sec7_18_3_2.c  test_sec7_19_1.c  test_sec7_19_2.c  test_sec7_19_5.c  test_sec7_2.c  test_sec7_3.c  test_sec7_3_1.c  test_sec7_3_4.c  test_sec7_5_2.c  test_sec7_5_4.c  test_sec7_5_5.c  test_sec7_6_2.c  test_sec7_6_3.c  test_sec7_6_4.c  test_sec7_6_5.c  test_sec7_7_2.c  test_sec7_7_3.c  test_sec7_7_4.c  (+21 more)
tests/data/: test_autodel.c  test_data_initialization.c  test_defaults.c  test_emptycont.c  test_instid_remove.c  test_json.c  test_keys.c  test_leafref_remove.c  test_libyang.c  test_lyb.c  test_mandatory.c  test_metadata.c  test_must_1.1.c  test_parse_print.c  test_state_lists.c  test_unique.c  test_unknown_element.c  test_user_types.c  test_values.c  test_when.c  test_when_1.1.c  test_yang_data.c  test_yang_data_ns.c  test_yangtypes_xpath.c
tests/features/: CMakeLists.txt  test_metadata.c  test_nacm.c  test_types.c
tests/fuzz/: CMakeLists.txt  README.md  buf_add_char.c  fuzz_regression_test.c  jsonfuzz.c  lybfuzz.c  lyd_parse_mem.c  lyd_parse_mem_json.c  lyd_parse_mem_xml.c  lys_parse_mem.c  main.c  xml_lyd_parse_path_fuzz.c  yang_parse_module.c  yangfuzz.c  yinfuzz.c
tests/internal/: test_hash_table.c  test_ly_set.c  test_lyb.c  test_tree_internal.c  test_xml_internal.c
tests/perf/: CMakeLists.txt  Makefile  addloop.c  perf.c  perf.yang  perftest-config.rng  sizes.c  validation.c  validation_xml.c
tests/plugins/: CMakeLists.txt  invalid.c  simple.c  validate.c
tests/schema/: test_augment.c  test_conformance.c  test_deviation.c  test_extensions.c  test_feature.c  test_ietf.c  test_import.c  test_include.c  test_leaflist.c  test_printer.c  test_refine.c  test_status.c  test_typedef.c
tests/src/: CMakeLists.txt  common.c  context.c  hash_table.c  set.c  test_common.c  test_context.c  test_hash_table.c  test_parser_xml.c  test_parser_yang.c  test_parser_yin.c  test_printer_xml.c  test_printer_yang.c  test_set.c  test_tree_data.c  test_tree_schema.c  test_tree_schema_compile.c  test_tree_schema_helpers.c  test_validation.c  test_xml.c  xml.c
tests/style/: CMakeLists.txt  check_includes.sh  cpp_compat.c
tests/utests/: CMakeLists.txt  test_common.c  test_context.c  test_hash_table.c  test_inout.c  test_json.c  test_set.c  test_tree_schema.c  test_xml.c  test_xpath.c  test_yanglib.c  utests.h
tests/yanglint/: CMakeLists.txt
tests/yangre/: CMakeLists.txt
tests_internal/: CMakeLists.txt  config.h.in
tests_internal/tree_internal/: test_lyd_attr_parent.c  test_lyd_check_mandatory_tree.c  test_lyd_list_equal.c  test_lys_find_grouping_up.c  test_lys_node_switch.c
tools/lint/: CMakeLists.txt  cmd.c  cmd.h  cmd_add.c  cmd_clear.c  cmd_cli.c  cmd_cmp.c  cmd_data.c  cmd_debug.c  cmd_extdata.c  cmd_feature.c  cmd_help.c  cmd_list.c  cmd_load.c  cmd_print.c  cmd_searchpath.c  cmd_verb.c  commands.c  commands.h  common.c  common.h  completion.c  completion.h  configuration.c  interactive_cmd.c  interactive_cmd_off.c  main.c  main_ni.c  mreadline.c  mreadline.h  yanglint.1  yl_opt.c  yl_opt.h  yl_schema_features.c  yl_schema_features.h
(+760 files in other folders)
